# tkr

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  devbox.json  justfile  run.sh
.tickets/closed/: t-2077287f.md  t-5854717.md  t-aa54bf7.md
.tickets/in_progress/: t-1e3613dc.md  t-2077287f.md  t-5854717.md  t-aa54bf7.md
.tickets/open/: t-104ff31b.md  t-10695a5c.md  t-10d84cf5.md  t-11c2e0ce.md  t-129d4a80.md  t-13b2b2f8.md  t-16849800.md  t-1811dd60.md  t-18c2be32.md  t-1b264bef.md  t-1c063f76.md  t-1d5aaf98.md  t-1e3c8d6.md  t-2077287f.md  t-234efee8.md  t-23e86df1.md  t-243ce3fe.md  t-265ffce3.md  t-3921dee.md  t-42d234.md  t-57cd01.md  t-5854717.md  t-84daabd.md  t-a6ddda4.md  t-aa54bf7.md  t-d82e110.md  t-e57785c.md  t-e79b03f.md  t-f7a78a4.md
apps/active/cli/ticketr/: Makefile
apps/active/cli/ticketr/core/: AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix
apps/active/cli/ticketr/core/.tickets/: c-8573389.md
apps/active/cli/ticketr/core/src/: cli.rs  main.rs  main_old.rs  ticket.rs  tui.rs  utils.rs  web.rs
apps/active/cli/ticketr/core/tests/: cli_tests.rs
apps/active/cli/ticketr/core/web/: index.html
src/: cli.rs  tui.rs  web.rs
tests/: basic_integration.rs  cli_tests.rs  comprehensive_integration.rs
web/: index.html
