[package]
name = "tkr"
version = "0.1.0"
edition = "2021"
description = "A ticket management system with dependency tracking and mono-repo support"
authors = ["Levon K"]
license = "MIT"
repository = "https://github.com/levonk/job-aide"

[[bin]]
name = "tkr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
ctrlc = "3.4"
indicatif = "0.17"
glob = "0.3"
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
shell-escape = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
url = "2.0"
ratatui = "0.24"
crossterm = "0.27"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
